--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="/Users/sayleemhatre/Downloads/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="/Users/sayleemhatre/Downloads/taglibs-standard-impl-1.2.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
