--- a/.gitignore
+++ b/.gitignore
@@ -238,3 +238,56 @@
 /build
 /build
 /build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
