--- a/.classpath
+++ b/.classpath
@@ -8,15 +8,9 @@
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Samsung/Downloads/ojdbc6.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Samsung/Downloads/servlet-api.jar/servlet-api.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre7">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
-
-	<classpathentry kind="lib" path="D:/Data D/karishma docs/NCSU/sem 1/dbms/ProjectGradiance/WebContent/WEB-INF/lib/jstl-1.2.jar"/>
-
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/javax.servlet-api-3.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="lib/taglibs-standard-impl-1.2.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
