--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,121 +1,118 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://java.sun.com/xml/ns/javaee"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	id="WebApp_ID" version="3.0">
-	<display-name>DBMS</display-name>
-	<welcome-file-list>
-		<welcome-file>Home</welcome-file>
-		<welcome-file>index.html</welcome-file>
-	</welcome-file-list>
-	<servlet>
-		<description>selectcourseprof Functions</description>
-		<display-name>selectcourseprof</display-name>
-		<servlet-name>selectcourseprof</servlet-name>
-		<servlet-class>selectcourseprof</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>selectcourseprof</servlet-name>
-		<url-pattern>/selectcourseprof</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description>addcourseprof Functions</description>
-		<display-name>addcourseprof</display-name>
-		<servlet-name>addcourseprof</servlet-name>
-		<servlet-class>addcourseprof</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>addcourseprof</servlet-name>
-		<url-pattern>/addcourseprof</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description>chosencourse Functions</description>
-		<display-name>chosencourse</display-name>
-		<servlet-name>chosencourse</servlet-name>
-		<servlet-class>chosencourse</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>chosencourse</servlet-name>
-		<url-pattern>/chosencourse</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description>preaddquestions Functions</description>
-		<display-name>preaddquestions</display-name>
-		<servlet-name>preaddquestions</servlet-name>
-		<servlet-class>preaddquestions</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>preaddquestions</servlet-name>
-		<url-pattern>/preaddquestions</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description>preedithomework Functions</description>
-		<display-name>preedithomework</display-name>
-		<servlet-name>preedithomework</servlet-name>
-		<servlet-class>preedithomework</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>preedithomework</servlet-name>
-		<url-pattern>/preedithomework</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description>searchaddqtn Functions</description>
-		<display-name>searchaddqtn</display-name>
-		<servlet-name>searchaddqtn</servlet-name>
-		<servlet-class>searchaddqtn</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>searchaddqtn</servlet-name>
-		<url-pattern>/searchaddqtn</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description>removeqtn Functions</description>
-		<display-name>removeqtn</display-name>
-		<servlet-name>removeqtn</servlet-name>
-		<servlet-class>removeqtn</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>removeqtn</servlet-name>
-		<url-pattern>/removeqtn</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description>sendtopics Functions</description>
-		<display-name>sendtopics</display-name>
-		<servlet-name>sendtopics</servlet-name>
-		<servlet-class>sendtopics</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>sendtopics</servlet-name>
-		<url-pattern>/sendtopics</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description>previewhomework Functions</description>
-		<display-name>previewhomework</display-name>
-		<servlet-name>previewhomework</servlet-name>
-		<servlet-class>previewhomework</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>previewhomework</servlet-name>
-		<url-pattern>/previewhomework</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description>logout Functions</description>
-		<display-name>logout</display-name>
-		<servlet-name>logout</servlet-name>
-		<servlet-class>logout</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>logout</servlet-name>
-		<url-pattern>/logout</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description>sendtextbook Functions</description>
-		<display-name>sendtextbook</display-name>
-		<servlet-name>sendtextbook</servlet-name>
-		<servlet-class>sendtextbook</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>sendtextbook</servlet-name>
-		<url-pattern>/sendtextbook</url-pattern>
-	</servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+  <display-name>DBMS</display-name>
+  <welcome-file-list>
+    <welcome-file>Home</welcome-file>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
+  <servlet>
+    <description>selectcourseprof Functions</description>
+    <display-name>selectcourseprof</display-name>
+    <servlet-name>selectcourseprof</servlet-name>
+    <servlet-class>selectcourseprof</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>selectcourseprof</servlet-name>
+    <url-pattern>/selectcourseprof</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>addcourseprof Functions</description>
+    <display-name>addcourseprof</display-name>
+    <servlet-name>addcourseprof</servlet-name>
+    <servlet-class>addcourseprof</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>addcourseprof</servlet-name>
+    <url-pattern>/addcourseprof</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>chosencourse Functions</description>
+    <display-name>chosencourse</display-name>
+    <servlet-name>chosencourse</servlet-name>
+    <servlet-class>chosencourse</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>chosencourse</servlet-name>
+    <url-pattern>/chosencourse</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>preaddquestions Functions</description>
+    <display-name>preaddquestions</display-name>
+    <servlet-name>preaddquestions</servlet-name>
+    <servlet-class>preaddquestions</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>preaddquestions</servlet-name>
+    <url-pattern>/preaddquestions</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>preedithomework Functions</description>
+    <display-name>preedithomework</display-name>
+    <servlet-name>preedithomework</servlet-name>
+    <servlet-class>preedithomework</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>preedithomework</servlet-name>
+    <url-pattern>/preedithomework</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>searchaddqtn Functions</description>
+    <display-name>searchaddqtn</display-name>
+    <servlet-name>searchaddqtn</servlet-name>
+    <servlet-class>searchaddqtn</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>searchaddqtn</servlet-name>
+    <url-pattern>/searchaddqtn</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>removeqtn Functions</description>
+    <display-name>removeqtn</display-name>
+    <servlet-name>removeqtn</servlet-name>
+    <servlet-class>removeqtn</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>removeqtn</servlet-name>
+    <url-pattern>/removeqtn</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>sendtopics Functions</description>
+    <display-name>sendtopics</display-name>
+    <servlet-name>sendtopics</servlet-name>
+    <servlet-class>sendtopics</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>sendtopics</servlet-name>
+    <url-pattern>/sendtopics</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>previewhomework Functions</description>
+    <display-name>previewhomework</display-name>
+    <servlet-name>previewhomework</servlet-name>
+    <servlet-class>previewhomework</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>previewhomework</servlet-name>
+    <url-pattern>/previewhomework</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>logout Functions</description>
+    <display-name>logout</display-name>
+    <servlet-name>logout</servlet-name>
+    <servlet-class>logout</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>logout</servlet-name>
+    <url-pattern>/logout</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>sendtextbook Functions</description>
+    <display-name>sendtextbook</display-name>
+    <servlet-name>sendtextbook</servlet-name>
+    <servlet-class>sendtextbook</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>sendtextbook</servlet-name>
+    <url-pattern>/sendtextbook</url-pattern>
+  </servlet-mapping>
 </web-app>
